# a2a-demo

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.langgraph  README.md  config.yaml  context.yaml  docker-compose.yml  langgraph.json  prompts.yaml  pytest.ini  requirements-dev.txt  run.sh
planner/: Dockerfile  langgraph.json  main.py  pyproject.toml  requirements.txt
shared/: auth.py  config.py  context.py  graph_builder.py  model_factory.py  outcomes.py  prompts.py
shared/tools/: calculator.py  registry.py  web_search.py
tests/: conftest.py
tests/integration/: test_planner.py  test_worker.py
tests/unit/: test_auth.py  test_config.py  test_context.py  test_graph_builder.py  test_outcomes.py  test_prompts.py  test_tools.py
worker/: Dockerfile  langgraph.json  main.py  pyproject.toml
